--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8">
@@ -9,7 +9,9 @@
     <link href="favicon.ico" rel="icon" type="image/x-icon" />
   </head>
   <body>
-      <canvas id="canvas"></canvas>
+    <!-- 5.  Add a preset score div to the HTML page-->
+    <div id="score">0</div>
+    <canvas id="canvas"></canvas>
     <script src="dist/js/main.js"></script>
   </body>
 </html>
